--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
         <meta name="viewport" content="width = device-width, initial-scale = 1">
         <title>Muathasim's Page</title>
         <link rel="stylesheet" href="static/css/index.css">
-        <!-- <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css"> -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://use.typekit.net/gvi2jfb.css">
         <script src="js/index.js"></script>
@@ -14,15 +13,18 @@
             integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
             crossorigin="anonymous">
         </script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/6.2.3/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/6.2.3/firebase-database.js"></script>
     </head>
     <body>
         <div class="cover container-fluid">
             <div class="navbar transparent row">
                 <span class="col-lg-2 offset-lg-6 col-md-2 offset-md-6 col-sm-2 offset-sm-6"><a href="#" class="selected" id="about" onclick="onNavClick('about')">About</a></span>
                 <span class="col-lg-2 col-md-2 col-sm-2"><a href="#" id="gallery" onclick="onNavClick('gallery')">Gallery</a></span>
-                <span class="col-lg-2 col-md-2 col-sm-2"><a href="#" id="contact" onclick="onNavClick('contact')">Contact</a></span>
+                <span class="col-lg-2 col-md-2 col-sm-2"><a href="#" id="contact" onclick="onNavClick('contact')" data-toggle="modal" data-target="#exampleModal">Contact</a></span>
             </div>
-            <div class="about row">
+            <div class="about row" id="about-section">
                 <div class="col-lg-6 offset-lg-2 col-md-6 offset-md-2 col-sm-6 offset-sm-2">
                     <div class="row">
                         <span class="about-title col-lg-12 col-md-12 col-sm-12">Muathasim M Parambat</span>
@@ -35,33 +37,65 @@
             <div class="gallery row" id="gallery-section">
                 <div class="col-lg-12">
                     <div class="gallery-title row justify-content-center">Gallery</div>
-                    <div class="images row">
+                    <div class="images row justify-content-center">
                         <div class="col-lg-4">
-                            <img src="static/image/1.jpg" width="336" height="425" alt="1" />
+                            <img src="static/image/1.jpg" width="260" height="340" alt="1" />
                         </div>
                         <div class="col-lg-4">
-                            <img src="static/image/2.jpg" width="336" height="425" alt="2" />
+                            <img src="static/image/2.jpg" width="260" height="340" alt="2" />
                         </div>
                         <div class="col-lg-4">
-                            <img src="static/image/3.jpg" width="336" height="425" alt="3" />
+                            <img src="static/image/3.jpg" width="260" height="340" alt="3" />
                         </div>
                         <div class="col-lg-4">
-                            <img src="static/image/4.jpg" width="336" height="425" alt="4" />
+                            <img src="static/image/4.jpg" width="260" height="340" alt="4" />
                         </div>
                         <div class="col-lg-4">
-                            <img src="static/image/5.jpg" width="336" height="425" alt="5" />
+                            <img src="static/image/5.jpg" width="260" height="340" alt="5" />
                         </div>
                         <div class="col-lg-4">
-                            <img src="static/image/6.jpg" width="336" height="425" alt="6" />
+                            <img src="static/image/6.jpg" width="260" height="340" alt="6" />
                         </div>
                         <div class="col-lg-4">
-                            <img src="static/image/7.jpg" width="336" height="425" alt="7" />
+                            <img src="static/image/7.jpg" width="260" height="340" alt="7" />
                         </div>
                         <div class="col-lg-4">
-                            <img src="static/image/8.jpg" width="336" height="425" alt="8" />
+                            <img src="static/image/8.jpg" width="260" height="340" alt="8" />
                         </div>
                     </div>
                 </div>  
+            </div>
+            <div class="footer row">
+                <div class="col-lg-4 offset-lg-8">
+                    <span class="row">Mobile: 9544766381</span>
+                    <span class="row">Email: muth4muathasim@gmail.com</span>
+                </div>
+            </div>
+            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-lg" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">Contact</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <form class="form-group">
+                                <label for="name">Name</label>
+                                <input id="name" class="form-control" type="text" placeholder="Name" />
+                                <label for="email">Email</label>
+                                <input id="email" class="form-control" type="email" placeholder="Email" />
+                                <label for="message">Message</label>
+                                <textarea id="message" class="form-control" type="text" placeholder="Message"></textarea>
+                            </form>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                            <button type="button" id="submit" data-dismiss="modal" class="btn btn-primary">Submit</button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
